--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=BCC
+DB_DATABASE=bcc
 DB_USERNAME=root
 DB_PASSWORD=root
 
