--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "sweetalert2": "^9.5.3",
+        "vform": "^1.0.1",
         "vue": "^2.5.17",
         "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10"
