--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-medialibrary": "^9.0.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
