--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "sweetalert2": "^9.5.3"
+        "sweetalert2": "^9.5.3",
+        "joi-browser": "^13.4.0"
     },
     "dependencies": []
 }
